[package]
name = "brainfuck-interpreter"
version = "1.2.1"
edition = "2021"
authors = ["stouma915"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = "2.34.0"
colored = "2.0.0"
once_cell = "1.9.0"
unescape = "0.1.0"